use mc dye colour